crates/ir/tests/snapshots/lower_test__traits__trait_fn_type.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__trait_fn_type

trait Callable[n8] { call(n8): String }
instance traits__trait_fn_type.Callable[$Fun1$Int$String] { call=Callable$$$Fun1$Int$String$$call }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
declare println: (o) -> Unit

fn greet(v0: Int) -> String =
  "hello"

fn main() -> Unit =
  let v2: (Int) -> String = make_closure(greet, [])
  let v3: Dict[traits__trait_fn_type.Callable, (Int) -> String] = get_dict traits__trait_fn_type.Callable[(Int) -> String]
  let v4: String = trait_call traits__trait_fn_type.Callable.call(v3, v2)
  let v1: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v1, v4)
  v5

fn Callable$$$Fun1$Int$String$$call(v6: (Int) -> String) -> String =
  let v7: String = call_closure v6(42)
  v7
