crates/ir/tests/snapshots/lower_test__traits__trait_fn_type_nonoverlap.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__trait_fn_type_nonoverlap

trait Convert[j9] { convert(j9): String }
instance traits__trait_fn_type_nonoverlap.Convert[$Fun1$$Var0$Int] { convert=Convert$$$Fun1$$Var0$Int$$convert }
instance traits__trait_fn_type_nonoverlap.Convert[$Fun1$$Var0$Bool] { convert=Convert$$$Fun1$$Var0$Bool$$convert }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (s) -> Unit

fn f(v0: String) -> Int =
  0

fn g(v1: String) -> Bool =
  true

fn main() -> Unit =
  let v2: (String) -> Int = make_closure(f, [])
  let v3: Dict[traits__trait_fn_type_nonoverlap.Convert, (String) -> Int] = get_dict traits__trait_fn_type_nonoverlap.Convert[(String) -> Int]
  let v4: String = trait_call traits__trait_fn_type_nonoverlap.Convert.convert(v3, v2)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v4)
  let v8: (String) -> Bool = make_closure(g, [])
  let v9: Dict[traits__trait_fn_type_nonoverlap.Convert, (String) -> Bool] = get_dict traits__trait_fn_type_nonoverlap.Convert[(String) -> Bool]
  let v10: String = trait_call traits__trait_fn_type_nonoverlap.Convert.convert(v9, v8)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call println(v7, v10)
  v11

fn Convert$$$Fun1$$Var0$Int$$convert(v12: (k9) -> Int) -> ~String =
  "to-int"

fn Convert$$$Fun1$$Var0$Bool$$convert(v13: (l9) -> Bool) -> ~String =
  "to-bool"
